BUG 3211: IE7 wraps the featured datasets weirdly.
QA: Retest. In reality, this happens with 3 OR 4
featured datasets, but at different widths. The problem
is that IE7 calculates the widths with weird rounding,
so sometimes the rounding would add up to an extra
pixel.

--- a/app/styles/screen-homepage-show.sass
+++ b/app/styles/screen-homepage-show.sass
@@ -147,6 +147,10 @@ $is_customizer: false !default
   .featuredViewContainer
     float: left
 
+    &.last
+      float: none
+      overflow: hidden
+
     .featuredView
       background-color: #fff
       border: 1px solid $color_chrome_box_border
